# slop-studio

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO_bluesky_credentials.md  TODO_check_next_job.md  TODO_multi_image_posts.md  main.py  manifest.json  manual_test.py  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-mcpb.yml
.greptile/: config.json  files.json  rules.md
_bmad-output/implementation-artifacts/: 1-1-package-structure-configuration-and-error-types.md  1-2-fastmcp-server-with-stdio-transport-and-startup-validation.md  2-1-template-discovery-and-starter-templates.md  2-2-job-submission-with-input-injection-and-seed-randomization.md  2-3-job-monitoring-and-completion-polling.md  2-4-image-retrieval-and-output-organization.md  3-1-add-and-update-workflow-templates-with-validation.md  3-2-delete-workflow-templates.md  4-1-init-command-scaffolds-art-project.md  4-3-cross-platform-process-management.md  deferred-work.md  epic-1-retro-2026-03-29.md  epic-2-retro-2026-03-30.md  epic-3-retro-2026-03-30.md  spec-bsky-posting.md  spec-check-next-job.md  spec-cli-auth-init.md  spec-defensive-hardening.md  spec-image-input-support.md  spec-multi-image-posts.md  spec-sloppifier-synonymiser.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-29.md  prd.md  product-brief-ComfyClaude.md  (+1 more)
comfyclaude/: __init__.py  comfyui.py  config.py  server.py  templates.py
docs/: bluesky-posting-integration.md  comfy-cloud-integration.md  future-ideas.md  manual-testing-guide.md  motivation.md  prompt_synonymiser.py
scripts/: build_mcpb.py  probe_cloud.py  smoke_gpt_image_2.py
slop_studio/: __init__.py  bluesky.py  cli.py  comfyui.py  config.py  errors.py  gallery.py  init.py  mcpb.py  models.py  process.py  server.py  sloppify.py  templates.py
templates/: README.md  api_flux2_pro_1img.json  api_flux2_pro_2img.json  api_flux2_pro_4img.json  api_nano_banana_pro_1img.json  api_nano_banana_pro_1img.meta.json  api_nano_banana_pro_2img.meta.json  api_nano_banana_pro_text_to_image.meta.json  flux2_klein.meta.json  flux2_klein_edit.json  flux2_klein_edit.meta.json  flux2_klein_ultrawide.meta.json  image_flux2.meta.json  image_flux2_text_to_image.meta.json
tests/: conftest.py  test_bluesky.py  test_cli.py  test_cloud_backend.py  test_comfyui.py  test_config.py  test_error_backend_tagging.py  test_errors.py  test_init.py  test_mcpb.py  test_models.py  test_process.py  test_router.py  test_server.py  test_sloppify.py  test_templates.py
(+48 files in other folders)
