[project]
name = "slop-studio"
version = "0.1.0"
description = "MCP server for conversational image generation via ComfyUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
include = ["slop_studio*"]

[tool.setuptools.package-data]
slop_studio = ["assets/**/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
