[project]
name = "slop-studio"
version = "0.1.0"
description = "MCP server for conversational image generation via ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "Pillow>=11.0.0",
    "atproto>=0.0.55",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["slop_studio*"]

[tool.setuptools.package-data]
slop_studio = ["assets/**/*"]

[project.scripts]
slop-studio = "slop_studio.cli:main"

[project.optional-dependencies]
sloppify = [
    "torch",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
