[project]
name = "slop-studio"
version = "0.4.0"
description = "MCP server for conversational image generation via ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "Pillow>=11.0.0",
    "atproto>=0.0.55",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["slop_studio*"]

[tool.setuptools.package-data]
slop_studio = ["assets/**/*"]

[project.scripts]
slop-studio = "slop_studio.cli:main"

[project.optional-dependencies]
sloppify = [
    "torch",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "SIM117", # nested with — often clearer than flattened
]

[tool.ruff.lint.per-file-ignores]
"slop_studio/server.py" = ["E402"]  # late import after lifespan setup is intentional
"docs/*" = ["E501", "B", "RUF"]     # reference scripts, not production code
